# jetson-bot

./: .gitignore  cam_test.py  collect_demos.sh  cube_robot_interface.py  drive_system.py  gst_cam.py  policy_runner.py  run_cube_policy.sh  run_policy.sh  run_policy_tomas.sh  teleop_drive.py  teleop_recorder.py  teleop_velocity.py
ai-trainer-pc/: train_il.py
runners/: collect_demos.sh  run_cube_policy.sh  run_lerobot_policy.sh  run_policy.sh  run_policy_tomas.sh  train_default_lerobot.sh
src/: collect_demos.py  run_policy.py  run_policy_act_wheels_arm.py  train_il.py
src/feetech/: calibrate_sts3215_like_lerobot.py  check_sts3215_calibration.py  feetech_cli.py  feetech_jetson_tool.py  follower_receive.py  follower_receive_sts3215.py  follower_receive_u01.py  servo_controller_cmd.py  set_center.py  set_sts3215_limits_wide.py  sts3215_limits.py  teach_hard_limits.py  teach_limits.py  tune_gripper_protection.py  verify_limits.py
src/leobot-robot-jetsonbot/: pyproject.toml
src/leobot-robot-jetsonbot/lerobot_robot_jetsonbot/: jetsonbot_client.py  jetsonbot_host.py
src/lerobot_jetson-bot/: pyproject.toml
src/lerobot_jetson-bot/src/lerobot_jetson-bot/: __init__.py  config_jetsonbot.py  jetsonbot_client.py
src/lerobot_robot_jetsonbot/lerobot_robot_jetsonbot/: __init__.py  (+2 more)
src/notebook/: leader_publish.py  leader_publish_lerobot.py  leader_publish_range01.py  leader_publish_u01_syncread.py  make_lerobot_v3_from_jsonl.py
src/shared/: __init__.py  constants.py  esp32_link.py  imu_mpu6050.py  vision.py
src/test_progs/: gamepad_tester.py  sensors.py  serial_bus.py
(+2 files in other folders)
