[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_jetson-bot"
version = "0.1.0"
description = "LeRobot robot plugin for TomasBot (ESP32 diff-drive + Feetech arm + IMU + dual CSI cameras)"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pyserial",
  "lerobot",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
